--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,7 @@ body {
 }
 
 .content {
-  width: 90%;
+  width: 92%;
   margin: 2rem auto 4rem auto;
   border: 1px lightgray solid;
   overflow: hidden;
@@ -117,4 +117,11 @@ body {
   border-bottom: 2px lightgray solid;
   margin-bottom: 8px !important;
   padding-bottom: 8px;
+}
+
+.content.option3 {
+  .additionalInfo {
+    font-size: 15px;
+    font-weight: 600;
+  }
 }
