--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,127 +1,219 @@
 @import "normalise.scss";
+@import "typography.scss";
+
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
-  background-color: lightgray;
+  width: 100%;
 }
 
-.content {
-  width: 92%;
-  margin: 2rem auto 4rem auto;
+// Colours
+$background: hsla(225, 31, 20, 1);
+$secondaryText: hsla(0, 0, 100, 0.5);
+$buySide: hsla(184, 99, 36, 1);
+$sellSide: hsla(335, 70, 57, 1);
+
+.artboard {
+  position: relative;
+  display: flex;
+  color: white;
+  margin: 2rem auto 4rem 0;
   border: 1px lightgray solid;
   overflow: hidden;
-  padding: 24px 0;
-  background-color: white;
+  padding: 1.5rem 0 1.5rem 0;
+  background-color: $background;
+}
+
+nav {
+  min-width: 48px;
+  padding-top: 96px;
+
+  @media (min-width: 1001px) {
+    min-width: 216px;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-weight: 600;
+    color: hsla(0, 0, 100, 0.5);
+
+    li {
+      display: flex;
+      align-items: centre;
+      padding: 24px 16px;
+      .icon {
+        min-width: 24px;
+        min-height: 24px;
+        background-color: hsla(0, 0, 100, 0.5);
+        border-radius: 4px;
+      }
+      label {
+        margin-left: 16px;
+        display: none;
+        @media (min-width: 1000px) {
+          display: block;
+        }
+      }
+    }
+    .active {
+      color: hsla(0, 0, 100, 1);
+      .icon {
+        background-color: hsla(0, 0, 100, 1);
+      }
+    }
+  }
+} // End of nav
+
+.view {
+  padding: 0 2rem;
 }
 
 .header {
-  padding-top: 100px;
+  padding-top: 112px;
   display: flex;
-  // justify-content: space-between;
   width: 100%;
+  margin-bottom: 40px;
 
-  h4 {
-    // font-size: 0.8125rem;
-    margin: 0 0 4px 0;
-    font-weight: normal;
-    color: gray;
-    // padding-left: 12px;
-  }
-  h1 {
-    margin: 0 0 4px 0;
-    font-size: 1.5rem;
-    line-height: 1.2em;
-  }
-
-  .additionalInfo {
-    font-size: 1rem;
-    font-weight: normal;
-    margin: 0;
-    line-height: 1.5rem;
-  }
-
-  @media (min-width: 940px) {
-    h4 {
-      font-size: 1em;
+  .buySide {
+    width: 100%;
+    .bondName {
+      border-left: 0.25rem $buySide solid;
+      padding-left: 8px;
+      margin-bottom: 0.5rem;
     }
-    h1 {
-      font-size: 2rem;
-    }
-    .additionalInfo {
-      font-size: 1em;
+    .meta-data {
+      display: flex;
+      justify-content: flex-start;
+      padding-left: 12px; // 8px + 4px border
+      .box {
+        margin-right: 8px;
+        white-space: nowrap;
+      }
+      .highRisk {
+        font-weight: bold;
+        color: $sellSide;
+      }
     }
   }
-}
-
-.bookmark {
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  text-align: center;
-  min-width: 100px;
-  height: 200px;
-  border: 1px lightgray solid;
-  margin: -156px 16px 24px 16px;
-
-  .bookmarkInfo {
+  .sellSide {
+    width: 100%;
+    text-align: right;
+    .bondName {
+      border-right: 0.25rem $sellSide solid;
+      padding-right: 8px;
+    }
+    .meta-data {
+      display: flex;
+      justify-content: flex-end;
+      padding-right: 12px; // 8px + 4px border
+      .box {
+        margin-left: 8px;
+        white-space: nowrap;
+      }
+    }
+  }
+  @media (min-width: 1024px) {
+    .box {
+      background-color: hsla(225, 31, 25, 1);
+      border-radius: 4px;
+      padding: 4px 8px;
+    }
+  }
+  .bookmark {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    text-align: center;
+    min-width: 100px;
+    height: 200px;
+    border: 1px lightgray solid;
+    border-radius: 4px;
+    margin: -156px 16px 24px 16px;
+    .bookmarkInfo {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+    p {
+      color: $secondaryText;
+    }
   }
-}
+} // End of header
 
-.buySide {
-  // flex-grow: 1;
+.graphs {
   width: 100%;
-  .bondName {
-    border-left: 4px blue solid;
-    padding-left: 8px;
-  }
-  h4 {
-    padding-left: 0;
-  }
-  .additionalInfo {
-    padding-left: 12px;
+  margin: 40px auto 40px auto;
+  img {
+    width: 100%;
+    height: auto;
   }
 }
 
-.sellSide {
-  // flex-grow: 1;
-  width: 100%;
-  .bondName {
-    border-right: 4px red solid;
-    padding-right: 8px;
+.compareStats {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px 24px;
+  margin: 0 auto 16px;
+  font-size: 1rem;
+  max-width: 440px;
+  border: 1px $secondaryText solid;
+  border-radius: 4px;
+
+  div {
+    display: flex;
+
+    label {
+      display: inline;
+      color: $secondaryText;
+      margin-right: 8px;
+      font-weight: 600;
+    }
+    p {
+      margin: 0;
+      font-weight: bold;
+    }
   }
+}
+
+.sidebar {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 16px;
   text-align: right;
-  h4 {
-    padding-right: 0;
-  }
-  .additionalInfo {
-    padding-right: 12px;
+  @media (min-width: 1280px) {
+    position: relative;
+    width: 320px;
   }
 }
+// .additionalInfo.left {
+//   padding-left: 50%;
+//   align-items: flex-end;
+//   text-align: right;
+//   .box {
+//     margin: 0;
+//     &:nth-child(3) {
+//       font-weight: bold;
+//       color: $sellSide;
+//     }
+//     &:nth-child(4) {
+//       font-weight: bold;
+//       color: $sellSide;
+//     }
+//   }
+//   // justify-content: flex-end;
+// }
 
-.right {
-  text-align: right;
-}
-
-.left {
-  text-align: left;
-}
-
-.borderBottom {
-  border-bottom: 2px lightgray solid;
-  margin-bottom: 8px !important;
-  padding-bottom: 8px;
-}
-
-.content.option3 {
-  .additionalInfo {
-    font-size: 15px;
-    font-weight: 600;
-  }
-}
+// #additionalLeft {
+//   transition-duration: 400ms;
+//   display: flex;
+//   justify-content: flex-start;
+// }
