--- a/src/css/style.css
+++ b/src/css/style.css
@@ -318,6 +318,9 @@ h1 {
 .bondName h1 {
   margin-bottom: 0; }
 
+.bondName h3 {
+  margin-bottom: 0; }
+
 h2 {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -329,7 +332,8 @@ h3 {
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 600;
-  margin: 0; }
+  margin: 0;
+  margin-bottom: 1rem; }
 
 h3.preTitle {
   font-weight: normal;
@@ -424,7 +428,7 @@ nav {
   .header .buySide {
     width: 100%; }
     .header .buySide .bondName {
-      border-left: 0.25rem #00e6a9 double;
+      border-left: 0.25rem #00e6a9 solid;
       padding-left: 8px;
       margin-bottom: 0.5rem; }
     .header .buySide .meta-data {
@@ -518,8 +522,10 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #01a8b5;
   padding: 1rem 1rem;
   border: 1px dashed rgba(255, 255, 255, 0.5);
+  font-weight: 600;
   border-radius: 4px;
   text-align: center; }
 
@@ -529,7 +535,8 @@ nav {
 table {
   width: 100%;
   line-height: 1.5rem;
-  border-spacing: 0 0.5rem; }
+  border-spacing: 0 0.5rem;
+  margin-bottom: 1rem; }
 
 th {
   text-align: left;
@@ -539,10 +546,33 @@ td {
   padding: 0 0.5rem; }
 
 td.sellSide {
-  border-left: 4px solid #de4585; }
+  position: relative; }
+  td.sellSide::before {
+    width: 4px;
+    height: 1rem;
+    content: "";
+    position: absolute;
+    left: 0px;
+    display: block;
+    margin-top: 4px;
+    background: #de4585; }
 
 td.buySide {
-  border-left: 4px double #00e6a9; }
+  position: relative; }
+  td.buySide::before {
+    width: 4px;
+    height: 1rem;
+    content: "";
+    position: absolute;
+    left: 0px;
+    display: block;
+    margin-top: 4px;
+    background: #00e6a9; }
+
+td.col_new {
+  padding: 0 0.25rem 0 0;
+  font-size: 0.8rem;
+  color: #f3ae4b; }
 
 .filterGroup {
   border: 1px solid rgba(255, 255, 255, 0.5);
@@ -560,3 +590,15 @@ td.buySide {
     background-color: #2c3654;
     border-radius: 4px;
     padding: 4px 8px; }
+
+.button {
+  padding: 0.5rem 1rem;
+  color: #01a8b5; }
+  .button a {
+    text-decoration: none;
+    color: inherit; }
+
+.table_footer {
+  display: flex;
+  justify-content: space-between;
+  color: rgba(255, 255, 255, 0.5); }
