--- a/scss/style.scss
+++ b/scss/style.scss
@@ -304,28 +304,35 @@ td.col_new {
   color: $shiny;
 }
 
-.filterGroup {
+.filterCard {
   border: 1px solid $secondaryText;
   border-radius: 0.25rem;
   margin-bottom: 1rem;
   position: relative;
   padding: 1rem;
-  // h2 {
-  //   margin-bottom: 2rem;
-  //   display: block;
-  //   position: absolute;
-  //   top: -1rem;
-  //   left: 0.5rem;
-  //   background-color: $background;
-  //   padding: 0 0.5rem 0 0.5rem;
-  // }
+  ol {
+    list-style: none;
+    padding: 0;
+
+    li {
+      line-height: 1.5rem;
+      margin-bottom: 0.5rem;
+    }
+  }
+}
+
+.filterCard_grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .meta-data {
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
   .meta-tag {
     margin-right: 8px;
+    margin-bottom: 8px;
     white-space: nowrap;
     background-color: hsla(225, 31, 25, 1);
     border-radius: 4px;
