--- a/src/css/style.css
+++ b/src/css/style.css
@@ -574,18 +574,30 @@ td.col_new {
   font-size: 0.8rem;
   color: #f3ae4b; }
 
-.filterGroup {
+.filterCard {
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0.25rem;
   margin-bottom: 1rem;
   position: relative;
   padding: 1rem; }
+  .filterCard ol {
+    list-style: none;
+    padding: 0; }
+    .filterCard ol li {
+      line-height: 1.5rem;
+      margin-bottom: 0.5rem; }
+
+.filterCard_grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr; }
 
 .meta-data {
   display: flex;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+  flex-wrap: wrap; }
   .meta-data .meta-tag {
     margin-right: 8px;
+    margin-bottom: 8px;
     white-space: nowrap;
     background-color: #2c3654;
     border-radius: 4px;
