--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,11 +1,16 @@
 // Typography
 
+$semiBold: 300;
+$regular: 400;
+$semiBold: 600;
+$bold: 700;
+
 h1 {
   margin: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
   font-size: 1.75rem; // 28px
   line-height: 2rem; // 32px
-  font-weight: 700;
+  font-weight: $bold;
   @media (min-width: 1400px) {
     font-size: 2rem; // 32px
     line-height: 2.5rem; // 48px
@@ -25,7 +30,7 @@ h1 {
 h2 {
   font-size: 1.5rem;
   line-height: 2rem;
-  font-weight: 600;
+  font-weight: $semiBold;
   margin: 0;
   margin-bottom: 1rem;
 }
@@ -33,13 +38,13 @@ h2 {
 h3 {
   font-size: 1rem;
   line-height: 1.5rem;
-  font-weight: 600;
+  font-weight: $semiBold;
   margin: 0;
   margin-bottom: 1rem;
 }
 
 h3.preTitle {
-  font-weight: normal;
+  font-weight: $regular;
   color: $secondaryText;
 }
 
@@ -63,10 +68,17 @@ label {
   color: $shiny;
 }
 
+.newHighlight {
+  color: $shiny;
+  text-transform: uppercase;
+  font-weight: $semiBold;
+  font-size: 0.75em;
+}
+
 .noWrap {
   white-space: nowrap;
 }
 
 table {
-  font-weight: 600;
+  font-weight: $semiBold;
 }
