--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -303,8 +303,15 @@ td.buySide {
 
 td.col_new {
   padding: 0 0.25rem 0 0;
-  font-size: 0.8rem;
+  font-size: 2rem;
   color: $shiny;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  height: 1.5rem;
+  img {
+    margin-left: 0.25rem;
+  }
 }
 
 .filterCard {
@@ -358,4 +365,20 @@ td.col_new {
   display: flex;
   justify-content: flex-end;
   color: $secondaryText;
+}
+
+.ideasSummary {
+  list-style: none;
+  padding: 0;
+  font-size: 0.875rem;
+  line-height: 1rem;
+  font-weight: 600;
+  li {
+    margin-bottom: 0.5rem;
+  }
+}
+
+.monitored {
+  background-color: white;
+  color: $background;
 }
