--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,23 +1,14 @@
-@import "normalise.scss";
-@import "./fontawesome/scss/fontawesome.scss";
-@import "./fontawesome/scss/solid.scss";
-@import "./fontawesome/scss/brands.scss";
+@import "./fontawesome/scss/fontawesome";
+@import "./fontawesome/scss/solid";
+@import "./fontawesome/scss/brands";
+@import "partials/normalise";
+@import "partials/colors";
+@import "partials/typography";
+@import "partials/button";
+@import "partials/nav";
+@import "partials/nav-toggle";
+@import "partials/filters";
 
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap");
-
-// Colours
-$background: hsla(225, 31, 20, 1);
-$secondaryText: hsla(0, 0, 100, 0.5);
-$buySide: rgba(0, 230, 169, 1);
-$sellSide: hsla(335, 70, 57, 1);
-$primary: rgba(1, 168, 181, 1);
-$shiny: rgba(243, 174, 75, 1);
-
-@import "typography.scss";
-
-.hide {
-  visibility: hidden;
-}
 * {
   box-sizing: border-box;
 }
@@ -26,6 +17,41 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   width: 100%;
+}
+
+table {
+  width: 100%;
+  line-height: 1.5rem;
+  border-spacing: 0 0.5rem;
+  margin-bottom: 1rem;
+}
+
+th {
+  text-align: left;
+  text-transform: uppercase;
+}
+
+td {
+  padding: 0 0.5rem;
+}
+
+a {
+  color: $primary;
+}
+
+.hide {
+  visibility: hidden;
+}
+.highlight {
+  color: $shiny;
+}
+.new-ideas {
+  @extend small;
+  margin-left: 0.5rem;
+  text-transform: uppercase;
+}
+.katanaIndexIcon {
+  vertical-align: middle;
 }
 
 .artboard {
@@ -39,150 +65,15 @@ body {
   background-color: $background;
 }
 
-nav {
-  min-width: 48px;
-
-  @media (min-width: 1001px) {
-    min-width: 216px;
-  }
-
-  .mainLogo {
-    display: block;
-    background-image: url("../img/katana_logo_inIndex.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 1.5rem;
-    margin-left: 1.5rem;
-    margin-bottom: 2.5rem;
-    @media (min-width: 1001px) {
-      background-image: url("../img/katana_logo_platform.png");
-    }
-  }
-
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    font-weight: 600;
-    color: hsla(0, 0, 100, 0.5);
-
-    li {
-      display: flex;
-      align-items: centre;
-      padding: 24px 16px;
-      border-left: 8px solid hsla(0, 0, 100, 0.2);
-      margin-bottom: 0px;
-
-      &:hover {
-        background-color: hsla(0, 0, 100, 0.2);
-        color: hsla(0, 0, 100, 1);
-        .icon {
-          background-color: hsla(0, 0, 100, 1);
-        }
-      }
-
-      .icon {
-        min-width: 24px;
-        min-height: 24px;
-        background-color: hsla(0, 0, 100, 0.5);
-        border-radius: 4px;
-      }
-      label {
-        margin-left: 16px;
-        display: none;
-        @media (min-width: 1000px) {
-          display: block;
-        }
-      }
-    }
-    .active {
-      color: hsla(0, 0, 100, 1);
-      // background-color: $primary;
-      border-color: $primary;
-      .icon {
-        background-color: hsla(0, 0, 100, 1);
-      }
-    }
-  }
-} // End of nav
-
 .view {
   flex: 1;
   padding: 0 2rem;
   padding-top: 4rem;
 }
 
-.header {
-  display: flex;
-  width: 100%;
-  margin-bottom: 40px;
-
-  .buySide {
-    width: 100%;
-    .bondName {
-      border-left: 0.25rem $buySide solid;
-      padding-left: 8px;
-      margin-bottom: 0.5rem;
-    }
-    .meta-data {
-      display: flex;
-      justify-content: flex-start;
-      padding-left: 12px; // 8px + 4px border
-      .box {
-        margin-right: 8px;
-        white-space: nowrap;
-      }
-      .highRisk {
-        font-weight: bold;
-        color: $sellSide;
-      }
-    }
-  }
-  .sellSide {
-    width: 100%;
-    text-align: right;
-    .bondName {
-      border-right: 0.25rem $sellSide solid;
-      padding-right: 8px;
-    }
-    .meta-data {
-      display: flex;
-      justify-content: flex-end;
-      padding-right: 12px; // 8px + 4px border
-      .box {
-        margin-left: 8px;
-        white-space: nowrap;
-      }
-    }
-  }
-  @media (min-width: 1024px) {
-    .box {
-      background-color: hsla(225, 31, 25, 1);
-      border-radius: 4px;
-      padding: 4px 8px;
-    }
-  }
-  .bookmark {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    text-align: center;
-    min-width: 100px;
-    height: 200px;
-    border: 1px lightgray solid;
-    border-radius: 4px;
-    margin: -156px 16px 24px 16px;
-    .bookmarkInfo {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-    }
-    p {
-      color: $secondaryText;
-    }
-  }
-} // End of header
+.overview {
+  margin-bottom: 3rem;
+}
 
 .graphs {
   width: 100%;
@@ -233,60 +124,6 @@ nav {
 #pairDetails nav ul li.active {
   border-left: 0px;
 }
-// .additionalInfo.left {
-//   padding-left: 50%;
-//   align-items: flex-end;
-//   text-align: right;
-//   .box {
-//     margin: 0;
-//     &:nth-child(3) {
-//       font-weight: bold;
-//       color: $sellSide;
-//     }
-//     &:nth-child(4) {
-//       font-weight: bold;
-//       color: $sellSide;
-//     }
-//   }
-//   // justify-content: flex-end;
-// }
-
-// #additionalLeft {
-//   transition-duration: 400ms;
-//   display: flex;
-//   justify-content: flex-start;
-// }
-
-.newFilter {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: $primary;
-  padding: 1rem 1rem;
-  border: 1px dashed $secondaryText;
-  font-weight: 600;
-  border-radius: 4px;
-  text-align: center;
-}
-.savedFilters {
-  margin-bottom: 2rem;
-}
-
-table {
-  width: 100%;
-  line-height: 1.5rem;
-  border-spacing: 0 0.5rem;
-  margin-bottom: 1rem;
-}
-
-th {
-  text-align: left;
-  text-transform: uppercase;
-}
-
-td {
-  padding: 0 0.5rem;
-}
 
 td.sellSide {
   position: relative;
@@ -316,16 +153,24 @@ td.buySide {
   }
 }
 
-td.col_new {
-  padding: 0 0.25rem 0 0;
-  font-size: 2rem;
-  color: $shiny;
+.ideaRow {
+  td:first-child {
+    width: 40px;
+    padding-left: 0;
+  }
+}
+
+.status {
+  width: 40px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  height: 1.5rem;
+  padding: 0 0.75rem 0 0;
+  font-size: 2rem;
+  color: $shiny;
+
   img {
-    margin-left: 0.25rem;
+    margin-left: 0.5rem;
   }
 }
 
@@ -336,6 +181,11 @@ td.col_new {
   position: relative;
   padding: 1rem;
   background-color: hsla(225, 31, 16, 1);
+
+  a {
+    text-decoration: none;
+  }
+  
   ol {
     list-style: none;
     padding: 0;
@@ -367,28 +217,6 @@ td.col_new {
   }
 }
 
-button {
-  padding: 0.5rem 1rem;
-  background-color: $primary;
-  line-height: 1rem;
-  border: none;
-  border-radius: 2px;
-  text-transform: uppercase;
-  font-weight: 600;
-  color: white;
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-}
-
-button.mini {
-  padding: 0.5rem 0.5rem;
-  border: none;
-  background: none;
-  color: $primary;
-}
-
 .table_footer {
   display: flex;
   justify-content: flex-end;
@@ -401,6 +229,7 @@ button.mini {
   padding: 0;
   font-size: 0.875rem;
   line-height: 1rem;
+
   li {
     vertical-align: middle;
     margin-bottom: 0.5rem;
@@ -428,19 +257,19 @@ button.mini {
   border: 1px solid $secondaryText;
   background-color: hsla(225, 31, 16, 1);
 
-  div {
-    margin-right: 1.5rem;
-    label {
-      color: $secondaryText;
-      i {
-        margin-left: 0.25rem;
-      }
-    }
-  }
+  // div {
+  //   margin-right: 1.5rem;
+  //   label {
+  //     color: $secondaryText;
+  //     i {
+  //       margin-left: 0.25rem;
+  //     }
+  //   }
+  // }
 
-  button {
-    margin-left: auto;
-  }
+  // button {
+  //   margin-left: auto;
+  // }
 }
 
 .linkButton {
