--- a/src/scss/partials/_button.scss
+++ b/src/scss/partials/_button.scss
@@ -11,6 +11,9 @@
   letter-spacing: 0.5px;
   padding: 0.75rem 1.5rem;
   transition: border color 0.5s;
+  border: 1px solid $primary;
+  outline: none;
+  user-select: none;
 
   &--small {
     font-size: 1rem;
@@ -22,21 +25,9 @@
     cursor: no-drop;
   }
 
-  &--is-secondary {
-    border: 1px solid;
-    border-radius: 3px;
-    color: $white;
-    text-transform: uppercase;
-    display: inline-block;
-    font-size: 1.4rem;
-    font-weight: 600;
-    letter-spacing: 0.5px;
-    margin-bottom: 0.5rem;
-    padding: 1.05rem 2rem;
-    transition: border color 0.5s;
-    margin-left: 1rem;
+  &--secondary {
+    color: $primary;
     background: none;
-    cursor: pointer;
   }
 
   &--empty {
@@ -57,8 +48,13 @@
   &:disabled,
   &[disabled] {
     background-color: $white20;
+    border-color: $white20;
     color: $white50;
     cursor: not-allowed;
+
+    &.Button--secondary {
+      background: none;
+    }
   }
 }
 
