--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -188,18 +188,17 @@ td.buySide {
   a {
     text-decoration: none;
   }
+}
+ol {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 2rem;
 
-  ol {
-    list-style: none;
-    padding: 0;
-
-    li {
-      line-height: 1.5rem;
-      margin-bottom: 0.5rem;
-    }
+  li {
+    line-height: 1.5rem;
+    margin-bottom: 0.5rem;
   }
 }
-
 .filterCard_grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -210,6 +209,7 @@ td.buySide {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
+  margin-bottom: 1rem;
   .meta-tag {
     margin-right: 8px;
     margin-bottom: 8px;
@@ -285,4 +285,15 @@ td.buySide {
   font-weight: 600;
   color: $primary;
   text-decoration: none;
+}
+
+.optionsBar {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 0 1rem 0;
+}
+
+button.flat {
+  color: $primary;
+  background: none;
 }
