--- a/src/scss/partials/_button.scss
+++ b/src/scss/partials/_button.scss
@@ -4,6 +4,7 @@
   border-radius: 3px;
   color: $white;
   text-transform: uppercase;
+  text-decoration: none;
   cursor: pointer;
   display: inline-block;
   font-size: 1rem;
@@ -17,6 +18,7 @@
 
   &--small {
     font-size: 1rem;
+    line-height: 1rem;
     padding: 0.5rem 1rem;
   }
 
@@ -30,18 +32,19 @@
     background: none;
   }
 
-  &--empty {
-    padding: 0.5rem 1rem;
-    line-height: 1rem;
-    border: none;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: $primary;
+  &--tertiary {
+    color: $secondaryText;
     background: none;
   }
 
-  &--mini {
-    padding: 0.5rem 0.5rem;
+  &--empty {
+    border: none;
+    background: none;
+  }
+
+  &--link {
+    @extend .Button--empty;
+    padding: 0;
   }
 
   &--disabled,
