--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -26,12 +26,13 @@
     font-weight: 600;
     color: hsla(0, 0, 100, 0.5);
 
-    li {
+    .navItem {
       display: flex;
       align-items: centre;
       padding: 24px 16px;
-      border-left: 8px solid hsla(0, 0, 100, 0.2);
       margin-bottom: 0px;
+      border-left: 8px solid hsla(0, 0, 100, 0.2);
+      cursor: pointer;
 
       &:hover {
         background-color: hsla(0, 0, 100, 0.2);
@@ -42,18 +43,29 @@
         }
       }
 
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
+
+      &--no-border {
+        border: 0;
+      }
+
       .icon {
         min-width: 24px;
         min-height: 24px;
         background-color: hsla(0, 0, 100, 0.5);
         border-radius: 4px;
+        cursor: inherit;
       }
       label {
         margin-left: 16px;
         display: none;
+        cursor: inherit;
 
         @media (min-width: 1000px) {
-          display: block;
+          display: inline-block;
         }
       }
     }
