--- a/src/scss/partials/_filters.scss
+++ b/src/scss/partials/_filters.scss
@@ -190,3 +190,18 @@
     }
   }
 }
+
+#editName {
+  display: block;
+  margin: 0 2rem 1rem 0;
+  padding: 0.25rem;
+  color: $white;
+  font-weight: inherit;
+  background: none;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  outline: none;
+}
+
+#filterView #editName {
+  width: 100%;
+}
