--- a/src/scss/config/_elements.scss
+++ b/src/scss/config/_elements.scss
@@ -42,3 +42,12 @@ td {
 a {
   color: $primary;
 }
+
+input[type="text"] {
+  padding: 0.5rem 1rem;
+  line-height: 1.5rem;
+  border-radius: 0.25rem;
+  margin: 0.5rem;
+  font-size: 1rem;
+  font-weight: $bold;
+}
