--- a/src/scss/partials/_typography.scss
+++ b/src/scss/partials/_typography.scss
@@ -1,6 +1,13 @@
 // Typography
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap");
 
+// Typography
+
+$semiBold: 300;
+$regular: 400;
+$semiBold: 600;
+$bold: 700;
+
 h1 {
   margin: 0;
   margin-bottom: 2rem;
