WIP: Restructure repo to support future prototypes

--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -28,7 +28,7 @@
 
     .navItem {
       display: flex;
-      align-items: centre;
+      align-items: center;
       padding: 24px 16px;
       margin-bottom: 0px;
       border-left: 8px solid hsla(0, 0, 100, 0.2);
