--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,278 +1,17 @@
-@import "./fontawesome/scss/fontawesome";
-@import "./fontawesome/scss/solid";
-@import "./fontawesome/scss/brands";
-@import "partials/normalise";
-@import "partials/colors";
-@import "partials/typography";
+@import "plugins/fontawesome/scss/fontawesome";
+@import "plugins/fontawesome/scss/solid";
+@import "plugins/fontawesome/scss/brands";
+
+@import "config/normalise";
+@import "config/settings";
+@import "config/typography";
+@import "config/elements";
+@import "config/utility";
+@import "config/structure";
+
 @import "partials/button";
 @import "partials/nav";
 @import "partials/nav-toggle";
+@import "partials/ideas-table";
 @import "partials/filters";
-
-* {
-  box-sizing: border-box;
-}
-
-body, html {
-  background-color: $background;
-}
-
-body {
-  font-family: "Open Sans", sans-serif;
-  font-size: 16px;
-  width: 100%;
-}
-
-ol {
-  list-style: none;
-  padding: 0;
-
-  li {
-    line-height: 1.5rem;
-    margin-bottom: 0.5rem;
-  }
-}
-
-table {
-  width: 100%;
-  line-height: 1.5rem;
-  border-spacing: 0 0.5rem;
-  margin-bottom: 1rem;
-}
-
-th {
-  text-align: left;
-  text-transform: uppercase;
-}
-
-td {
-  padding: 0 0.5rem;
-}
-
-a {
-  color: $primary;
-}
-
-.hide {
-  visibility: hidden;
-}
-.highlight {
-  color: $shiny;
-}
-.new-ideas {
-  @extend small;
-  margin-left: 0.5rem;
-  text-transform: uppercase;
-}
-.katanaIndexIcon {
-  vertical-align: middle;
-}
-
-.artboard {
-  min-height: 1024px;
-  position: relative;
-  display: flex;
-  color: white;
-  margin: 0 auto 4rem 0;
-  overflow: hidden;
-  padding: 1.5rem 0 4rem 0;
-  background-color: $background;
-}
-
-.view {
-  position: relative;
-  flex: 1;
-  padding: 0 2rem;
-  padding-top: 4rem;
-}
-
-.overview {
-  margin-bottom: 3rem;
-}
-
-.graphs {
-  width: 100%;
-  margin: 40px auto 40px auto;
-  img {
-    width: 100%;
-    height: auto;
-  }
-}
-
-.compareStats {
-  display: flex;
-  justify-content: space-between;
-  padding: 16px 24px;
-  margin: 0 auto 16px;
-  font-size: 1rem;
-  max-width: 440px;
-  border: 1px $secondaryText solid;
-  border-radius: 4px;
-
-  div {
-    display: flex;
-
-    label {
-      display: inline;
-      color: $secondaryText;
-      margin-right: 8px;
-    }
-    p {
-      margin: 0;
-      font-weight: bold;
-    }
-  }
-}
-
-.sidebar {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 16px;
-  text-align: right;
-  @media (min-width: 1280px) {
-    position: relative;
-    width: 320px;
-  }
-}
-
-#pairDetails nav ul li.active {
-  border-left: 0px;
-}
-
-td.sellSide {
-  position: relative;
-  &::before {
-    width: 4px;
-    height: 1rem;
-    content: "";
-    position: absolute;
-    left: 0px;
-    display: block;
-    margin-top: 4px;
-    background: $sellSide;
-  }
-}
-
-td.buySide {
-  position: relative;
-  &::before {
-    width: 4px;
-    height: 1rem;
-    content: "";
-    position: absolute;
-    left: 0px;
-    display: block;
-    margin-top: 4px;
-    background: $buySide;
-  }
-}
-
-.ideaRow {
-  td:first-child {
-    width: 40px;
-    padding-left: 0;
-  }
-}
-
-.status {
-  width: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding: 0 0.75rem 0 0;
-  font-size: 2rem;
-  color: $shiny;
-
-  img {
-    margin-left: 0.5rem;
-  }
-}
-
-.filterCard {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: relative;
-  border: 1px solid $secondaryText;
-  border-radius: 0.25rem;
-  margin-bottom: 1rem;
-  position: relative;
-  padding: 1rem;
-  background-color: hsla(225, 31, 16, 1);
-
-  a {
-    text-decoration: none;
-  }
-
-  .deleteFilter {
-    position: absolute;
-    top: 1.15rem;
-    right: 1rem;
-    opacity: 0;
-    transition: opacity 0.25s;
-  }
-
-  &:hover {
-    .deleteFilter {
-      opacity: 1;
-    }
-  }
-}
-
-.filterCard_grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 1rem;
-}
-
-.optionsBar {
-  position: absolute;
-  top: 4.75rem;
-  right: 0;
-  padding: 0 0 1rem 0;
-}
-
-.meta-data {
-  flex: 1;
-
-  .meta-tag {
-    display: inline-block;
-    margin-right: 8px;
-    margin-bottom: 8px;
-    white-space: nowrap;
-    background-color: hsla(225, 31, 25, 1);
-    border-radius: 4px;
-    padding: 4px 8px;
-  }
-}
-
-.table_footer {
-  display: flex;
-  justify-content: flex-end;
-  color: $secondaryText;
-}
-
-.ideasSummary {
-  list-style: none;
-  padding: 0;
-  font-size: 0.875rem;
-  line-height: 1rem;
-
-  li {
-    vertical-align: middle;
-    margin-bottom: 0.5rem;
-    display: inline-block;
-    margin-right: 1.5rem;
-    line-height: 1.5rem;
-    img {
-      height: 1rem;
-      margin-right: 0.25rem;
-    }
-  }
-}
-
-.monitored {
-  background-color: white;
-  color: $background;
-}
+@import "partials/filter-cards"
