--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -267,11 +267,26 @@ input[type="text"] {
   padding: 0.5rem 1rem;
   line-height: 1.5rem;
   border-radius: 0.25rem;
-  margin: 0.5rem;
+  margin-right: 0.5rem;
   font-size: 1rem;
-  font-weight: $bold;
+  font-weight: $semiBold;
+  border: 0;
+  background-color: $secondaryText;
 }
 
 #monitor form {
   margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+#montor_table_emptyState {
+  margin: 2rem auto;
+  p {
+    color: $secondaryText;
+  }
+  // width: 66.66%;
+  // text-align: center;
+  // border-top: 1px solid $secondaryText;
 }
