--- a/src/scss/partials/_button.scss
+++ b/src/scss/partials/_button.scss
@@ -7,9 +7,10 @@
   cursor: pointer;
   display: inline-block;
   font-size: 1rem;
+  line-height: 1.5rem;
   font-weight: 600;
   letter-spacing: 0.5px;
-  padding: 0.75rem 1.5rem;
+  padding: 0.5rem 1.5rem;
   transition: border color 0.5s;
   border: 1px solid $primary;
   outline: none;
