--- a/src/scss/config/_elements.scss
+++ b/src/scss/config/_elements.scss
@@ -26,7 +26,7 @@ ol {
 table {
   width: 100%;
   line-height: 1.5rem;
-  border-spacing: 0 0.5rem;
+  border-spacing: 0;
   margin-bottom: 1rem;
 }
 
@@ -36,7 +36,7 @@ th {
 }
 
 td {
-  padding: 0 0.5rem;
+  padding: 0.25rem 0.5rem;
 }
 
 a {
