--- a/src/scss/config/_structure.scss
+++ b/src/scss/config/_structure.scss
@@ -34,7 +34,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  padding: 16px;
+  padding: 0 1rem;
   text-align: right;
   @media (min-width: 1280px) {
     position: relative;
