--- a/src/scss/config/_elements.scss
+++ b/src/scss/config/_elements.scss
@@ -47,7 +47,10 @@ input[type="text"] {
   padding: 0.5rem 1rem;
   line-height: 1.5rem;
   border-radius: 0.25rem;
-  margin: 0.5rem;
+  margin-right: 0.5rem;
   font-size: 1rem;
-  font-weight: $bold;
+  font-weight: $semiBold;
+  border: 0;
+  color: $white;
+  background-color: $secondaryText;
 }
