--- a/src/scss/partials/_filter-cards.scss
+++ b/src/scss/partials/_filter-cards.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  border: 1px solid $secondaryText;
+  border: 1px solid $secondary;
   border-radius: 0.25rem;
   margin-bottom: 1rem;
   position: relative;
