--- a/src/scss/partials/_monitor.scss
+++ b/src/scss/partials/_monitor.scss
@@ -5,9 +5,9 @@
 #montor_table_emptyState {
   margin: 2rem auto;
   p {
-    color: $secondaryText;
+    color: $secondary;
   }
   // width: 66.66%;
   // text-align: center;
-  // border-top: 1px solid $secondaryText;
+  // border-top: 1px solid $secondary;
 }
